<resources>
    <string name="app_name">UT BuySell</string>
    <string name="tab_1">Label 1</string>
    <string name="tab_2">Label 2</string>
    <string name="tab_3">Label 3</string>
    <string name="tab_4">Label 4</string>
    <string name="tab_5">Label 5</string>

    <string name="menu_1">Listings</string>
    <string name="menu_2">Transactions</string>
    <string name="menu_3">Inbox</string>
    <string name="menu_4">Profile</string>
    <string name="menu_5">Menu 5</string>

    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_create_post">Create Post</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">Please use a valid utexas email</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email_pass">Invalid email or password</string>
    <string name="login_worked">Login successful</string>
    <string name="auth_failed">Registration error: account exists or something went wrong</string>
    <string name="auth_pass">Your account is registered!</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>